clusters/talos-cluster/sonarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sonarr
  labels:
    pod-security.kubernetes.io/enforce: privileged
