clusters/talos-cluster/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr-deployment
  namespace: sonarr
  labels:
    app: sonarr-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: sonarr-deployment
  template:
    metadata:
      name: sonarr-deployment
      labels:
        app: sonarr-deployment
    spec:
      restartPolicy: Always
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.19@sha256:24acea2956a0ccb11f103877d9f4f8576600fb34bff34820ed749c2256dab89f
          imagePullPolicy: Always
          ports:
            - containerPort: 8989
              name: sonarr
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: sonarr-media
              mountPath: /media
      volumes:
        - name: gluetun-config
          persistentVolumeClaim:
            claimName: gluetun-data
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-data
        - name: sonarr-media
          persistentVolumeClaim:
            claimName: sonarr-media
