clusters/talos-cluster/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
  namespace: sonarr
spec:
  selector:
    app: sonarr-deployment
  type: LoadBalancer
  ports:
    - port: 8989
      targetPort: 8989
      name: sonarr-web
      protocol: TCP
