clusters/talos-cluster/sonarr/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-route
  namespace: sonarr
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "sonarr.horus.ossai.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sonarr-service
          port: 8989
